# replit-test-1

./: .env.example  .gitignore  .replit  PROMPTS.md  README.md  app.py  config.dev.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  supabase_schema.sql
attached_assets/: Pasted--iOS-App-Gallery-Standalone-Python-Web-Application-Create-a-standalone-Python-web-application-th-1736980791433.txt
data/: apps (bak1).json  apps.json  categories.json  settings.json
src/: __init__.py
src/models/: __init__.py  exceptions.py
src/routes/: __init__.py  apps.py  categories.py  settings.py
src/services/: __init__.py  data_processing.py  database.py
src/static/css/: style.css
src/templates/: base.html
src/templates/components/: app_card.html  edit_overlay.html  settings_overlay.html
src/utils/: __init__.py
static/: manifest.json  sw.js
static/css/: style.css
static/js/: app.js  handlers.js  main.js  settings.js
templates/: base.html  index.html
templates/components/: app_card.html  edit_overlay.html  settings_overlay.html
